Updated Lecture 4 materials

--- a/book/lecture-4/exercise-4.2-solutions.ipynb
+++ b/book/lecture-4/exercise-4.2-solutions.ipynb
@@ -4,18 +4,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "(ref:lec4:ex3)=\n",
-    "# Exercise 4.3"
+    "(ref:lec4:ex2)=\n",
+    "# Solutions of Exercise 4.2"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "```{figure} res/ex3.svg\n",
+    "```{figure} res/ex2.svg\n",
     "---\n",
     "height: 170\n",
-    "name: fig:lec4:ex3\n",
+    "name: fig:lec4:ex2_sol\n",
     "---\n",
     "Block diagram of the DC-servomotor.\n",
     "```"
@@ -25,7 +25,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In {numref}`fig:lec4:ex3` the block diagram of a DC-servomotor is illustrated. \n",
+    "In {numref}`fig:lec4:ex2_sol` the block diagram of a DC-servomotor is illustrated. \n",
     "\n",
     "In this system, the input voltage $u$ first goes through a [isolated DC-DC convert](https://en.wikipedia.org/wiki/DC-to-DC_converter)[^dc-dc], which applies the desired voltage $u$ to the motor.\n",
     "This converter is modeled by the first-order transfer function with time constant $T=10$ ms.\n",
@@ -38,7 +38,7 @@
     "2. Then, find $K$ so that the following accuracy requirements are sastisfied:\n",
     "   - When $\\theta_{ref}(t) = \\textrm{step}(t)$, at steady state $\\lvert \\theta -  \\theta_{ref} \\lvert \\leq 0.001$\n",
     "   - When $\\theta_{ref}(t) = 10 \\cdot \\textrm{ramp}(t)$, at steady state $\\lvert \\theta(t) -  \\theta_{ref}(t)  \\lvert \\leq 0.01$\n",
-    "3. **(Extra!)** Assume that the motor current can be measured. With the help of MATLAB, design a cascade control scheme for $G_2(s) = \\frac{Z(s)}{U(s)} = \\frac{1}{(1+sT)(1+sT_2)}$ and $G_1(s) = \\frac{Y(s)}{Z(s)} \\frac{10}{s(1+sT_1)}$, so that the phase margin is at least $60^\\circ$, and the bandwidth of the servomotr is at least $100$  rad/s."
+    "3. **(Extra!)** Assume that the motor current can be measured. With the help of MATLAB, design a cascade control scheme for $G_2(s) = \\frac{Z(s)}{U(s)} = \\frac{1}{(1+sT)(1+sT_2)}$ and $G_1(s) = \\frac{Y(s)}{Z(s)} = \\frac{10}{s(1+sT_1)}$, so that the phase margin is at least $60^\\circ$, and the bandwidth of the servomotr is at least $100$  rad/s."
    ]
   },
   {
@@ -65,13 +65,13 @@
     "\n",
     "$$\n",
     "G_o(s) = F(s) G(s) = K \\frac{10}{s(1+sT)(1+sT_1)(1+sT_2)}\n",
-    "$$ (eq:lec4:ex3:Go)\n",
+    "$$ (eq:lec4:ex2:Go)\n",
     "\n",
     "while the closed-loop transfer function is\n",
     "\n",
     "$$\n",
     "G_c(s) = \\frac{G_o(s)}{1+G_o(s)} = \\frac{10 K}{(T T_1 T_2)s^4 + (T T_1 + T T_2 + T_1 T_2) s^3 + (T+T_1+T_2 + T) s^2 + s + 10 K}\n",
-    "$$ (eq:lec4:ex3:Gc)\n",
+    "$$ (eq:lec4:ex2:Gc)\n",
     "\n",
     "Finding $\\omega_B$ such that $\\lvert G_c(i \\omega_B) \\lvert = \\frac{1}{\\sqrt{2}}$ is impractical because of its high order.\n",
     "\n",
@@ -200,7 +200,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Consider the open-loop transfer function {eq}`eq:lec4:ex3:Go` and the closed-loop transfer function {eq}`eq:lec4:ex3:Gc` for a generic gain $K$.\n",
+    "Consider the open-loop transfer function {eq}`eq:lec4:ex2:Go` and the closed-loop transfer function {eq}`eq:lec4:ex2:Gc` for a generic gain $K$.\n",
     "\n",
     "We start by analyzing for what values of $K$ the closed-loop remains stable. For this, we can use root locus."
    ]
