Fixed wrong label in 4.2

--- a/book/lecture-4/exercise-4.2-solutions.ipynb
+++ b/book/lecture-4/exercise-4.2-solutions.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "(ref:lec4:ex2)=\n",
+    "(ref:lec4:ex2_sol)=\n",
     "# Solutions of Exercise 4.2"
    ]
   },
