Typos + `bodeplot_universal`

--- a/book/lecture-3/exercise-3.2.ipynb
+++ b/book/lecture-3/exercise-3.2.ipynb
@@ -34,8 +34,14 @@
   }
  ],
  "metadata": {
-  "kernelspec": {},
-  "language_info": {}
+  "kernelspec": {
+   "display_name": "MATLAB Kernel",
+   "language": "matlab",
+   "name": "jupyter_matlab_kernel"
+  },
+  "language_info": {
+   "name": "matlab"
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 4
