--- a/book/lecture-4/exercise-4.0-solutions.ipynb
+++ b/book/lecture-4/exercise-4.0-solutions.ipynb
@@ -149,10 +149,10 @@
     "As seen during the lecture F6, the closed-loop resonance peak satisfies\n",
     "\n",
     "$$\n",
-    "M_p \\leq \\frac{1}{2 \\sin\\left( \\frac{\\varphi_m}{2} \\right)}\n",
+    "M_p \\geq \\frac{1}{2 \\sin\\left( \\frac{\\varphi_m}{2} \\right)}\n",
     "$$ \n",
     "\n",
-    "The worst-case resonance peak happens at the minimum phase margin, $\\varphi_m = 45^\\circ$, at which $M_p = 1.3$."
+    "The worst-case resonance peak happens at the minimum phase margin, $\\varphi_m = 45^\\circ$, at which $M_p \\geq 1.3$."
    ]
   }
  ],
