Fix bug on Octave / binder

--- a/book/lecture-1/dominant-pole.ipynb
+++ b/book/lecture-1/dominant-pole.ipynb
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": null,
    "id": "492b9f62",
    "metadata": {
     "tags": [
@@ -156,7 +156,11 @@
     "\n",
     "figure; \n",
     "pzmap(G); grid on; \n",
-    "set(get(gca, 'Responses'), 'MarkerSize', 20, 'LineWidth', 2); % Set pole marker size\n",
+    "\n",
+    "if exist('OCTAVE_VERSION', 'builtin') == 0\n",
+    "    % MATLAB-specific plot settings\n",
+    "    set(get(gca, 'Responses'), 'MarkerSize', 20, 'LineWidth', 2); % Set pole marker size\n",
+    "end\n",
     "title('Poles of G(s)');"
    ]
   },
