--- a/book/lecture-1/dominant-pole.ipynb
+++ b/book/lecture-1/dominant-pole.ipynb
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": null,
    "id": "e7c1cee7",
    "metadata": {
     "tags": [
@@ -231,7 +231,7 @@
    ],
    "source": [
     "% Download bodeplot_universal, identical to `bodeplot` but supporting Octave\n",
-    "fprint('\\n');\n",
+    "fprintf('\\n');\n",
     "if ~exist('bodeplot_universal')\n",
     "    urlwrite('https://raw.githubusercontent.com/bonassifabio/1RT485/refs/heads/main/book/res/matlab/bodeplot_universal.m', 'bodeplot_universal.m');\n",
     "end"
