Fixed fprintf incompatibility with Octave

--- a/book/lecture-1/dominant-pole.ipynb
+++ b/book/lecture-1/dominant-pole.ipynb
@@ -361,7 +361,7 @@
     "T_G1 = 5 / gamma;\n",
     "T_G2 = 5 / alpha;\n",
     "\n",
-    "str = sprintf('\\nSettling time (99%%):\\n\\tof G(s): %.2f sec\\n\\tof G1(s): %.2f sec\\n\\tof G2(s): %.2f sec\\n', T_G, T_G1, T_G2);\n",
+    "str = sprintf('\\nSettling time (99 percent):\\n\\tof G(s): %.2f sec\\n\\tof G1(s): %.2f sec\\n\\tof G2(s): %.2f sec\\n', T_G, T_G1, T_G2);\n",
     "fprintf(str);"
    ]
   }
