--- a/book/lecture-3/exercise-3.0-solutions.ipynb
+++ b/book/lecture-3/exercise-3.0-solutions.ipynb
@@ -110,14 +110,14 @@
     "To compute the poles, we look for the roots of $s^3 + 1 = 0$. Realizing that it's a [sum of cubes](https://en.wikipedia.org/wiki/Sum_of_two_cubes), we can factorize the left-hand side as\n",
     "\n",
     "$$\n",
-    "(s + 1)(s^2 + 1 - s) = 0\n",
+    "(s + 1)(s^2 - s + 1) = 0\n",
     "$$\n",
     "\n",
     "Therefore, the poles are\n",
     "- $s = -1$\n",
-    "- $s = \\frac{-1 \\pm \\sqrt{5}}{2}$\n",
+    "- $s = \\frac{1 \\pm i \\sqrt{3}}{2}$\n",
     "\n",
-    "Unfortunately, one of the poles $\\left( s = \\frac{-1 + \\sqrt{5}}{2} \\right)$ has positive real part $\\to$ unstable!\n",
+    "Unfortunately, the complex cojugate poles $\\left( s = \\frac{1 + i \\sqrt{3}}{2} \\right)$ have positive real part $\\to$ unstable!\n",
     "In this case, **we cannot apply the Frequency Response Theorem.**"
    ]
   },
