Fixed typo in Exercise 4.2

--- a/book/lecture-4/exercise-4.2-solutions.ipynb
+++ b/book/lecture-4/exercise-4.2-solutions.ipynb
@@ -30,7 +30,7 @@
     "In this system, the input voltage $u$ first goes through a [isolated DC-DC convert](https://en.wikipedia.org/wiki/DC-to-DC_converter)[^dc-dc], which applies the desired voltage $u$ to the motor.\n",
     "This converter is modeled by the first-order transfer function with time constant $T=10$ ms.\n",
     "\n",
-    "The voltage is then applied to the motor, described by a second order transfer function with gaim $k_m=10$, electrical time constant $T_2 =25$ ms, and mechanical time constant $T_1 = 50$ ms.\n",
+    "The voltage is then applied to the motor, described by a second order transfer function with gain $k_m=10$, electrical time constant $T_2 =25$ ms, and mechanical time constant $T_1 = 50$ ms.\n",
     "\n",
     "The servomotor is first tested with $F(s) = 1$, but the closed-loop turns out to be too slow. \n",
     "\n",
