--- a/book/lecture-4/exercise-4.2-solutions.ipynb
+++ b/book/lecture-4/exercise-4.2-solutions.ipynb
@@ -80,6 +80,19 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": [
+     "remove-cell"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "set(groot, 'defaultLineLineWidth', 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 20,
    "metadata": {},
    "outputs": [
