- Moved Exercise 5.0 to Exercise 5.1. - New Exercise 5.0

--- a/book/lecture-5/exercise-5.1-more-details.ipynb
+++ b/book/lecture-5/exercise-5.1-more-details.ipynb
@@ -11,7 +11,7 @@
     "tags": []
    },
    "source": [
-    "(ref:lec5:ex0_more_details)=\n",
+    "(ref:lec5:ex1_more_details)=\n",
     "# Plotting the exact Sensitivity function"
    ]
   },
@@ -54,7 +54,8 @@
    },
    "outputs": [],
    "source": [
-    "set(groot, 'defaultLineLineWidth', 2)"
+    "set(groot, 'defaultLineLineWidth', 2)\n",
+    "set(groot, 'defaultFigureColor', 'w');"
    ]
   },
   {
