- Fixed bugs in `asymptotic_bodemag` - Added exercise 5.2

--- a/book/lecture-5/exercise-5.0-solutions.ipynb
+++ b/book/lecture-5/exercise-5.0-solutions.ipynb
@@ -100,6 +100,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "68c7259c",
+   "metadata": {},
+   "source": [
+    "## Solution"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "8a98e7dc",
    "metadata": {},
    "source": [
@@ -146,7 +154,7 @@
    "id": "0e078d3b",
    "metadata": {},
    "source": [
-    "## Question 1"
+    "### Question 1"
    ]
   },
   {
@@ -222,7 +230,7 @@
    "id": "45e45c81",
    "metadata": {},
    "source": [
-    "## Question 2"
+    "### Question 2"
    ]
   },
   {
@@ -316,7 +324,7 @@
    "id": "e7c74eb3",
    "metadata": {},
    "source": [
-    "## Analytical solutions\n"
+    "### Analytical solutions\n"
    ]
   },
   {
@@ -354,7 +362,7 @@
    "id": "6ac54870",
    "metadata": {},
    "source": [
-    "### Question 1 - $K=1$"
+    "#### Question 1 - $K=1$"
    ]
   },
   {
@@ -376,7 +384,7 @@
    "id": "9b7a689a",
    "metadata": {},
    "source": [
-    "### Question 2\n",
+    "#### Question 2\n",
     "\n",
     "We need to compute for what values of $K$ {eq}`eq:lec5:ex0_sol:T_modulus` is smaller than $0.1$, so that the attenuation factor is (at least) $10$. This inequality is really nasty, because if we try to evaluate the squares a fourth order term $K^4$ appears. Instead of solving it explicitly, we can try probing different values of $K$ to numerically find one that makes $\\lvert T(i 50) \\lvert \\approx 0.1$. Note that the calculation of $\\lvert T(i 50) \\lvert$ for different values of $K$ can be easily automated with a programmable calculator!"
    ]
@@ -432,7 +440,7 @@
    "id": "038e1ae0",
    "metadata": {},
    "source": [
-    "## Question 3"
+    "### Question 3"
    ]
   },
   {
@@ -609,7 +617,7 @@
    "id": "9c61ab88",
    "metadata": {},
    "source": [
-    "### Step response simulations\n",
+    "#### Step response simulations\n",
     "\n",
     "We can illustrate this trade-off by simply simulating the closed-loop acheived by $F(s) = 0.44$ and by $F(s) = \\frac{20}{s + 20}$, when\n",
     "- $r(t) = \\text{step}(t)$, and\n",
