--- a/book/lecture-5/exercise-5.1-solutions.ipynb
+++ b/book/lecture-5/exercise-5.1-solutions.ipynb
@@ -74,7 +74,7 @@
    "id": "59955976",
    "metadata": {},
    "source": [
-    "## Solutions"
+    "## Solution"
    ]
   },
   {
@@ -199,7 +199,7 @@
     "tags": []
    },
    "source": [
-    "## Alternative solution via Bode plots\n",
+    "### Alternative solution via Bode plots\n",
     "\n",
     "The problem could have been solved very easily with Bode plots. Even though approximate, this solution is the suggested one.\n",
     "\n",
