Added ILOs to Exercise 5.2

--- a/book/lecture-5/exercise-5.2.ipynb
+++ b/book/lecture-5/exercise-5.2.ipynb
@@ -6,7 +6,8 @@
    "metadata": {},
    "source": [
     "(ref:lec5:ex2)=\n",
-    "# Exercise 5.2"
+    "# Exercise 5.2\n",
+    "{ilo}`analysis_robustness`"
    ]
   },
   {
