- Added Exercise 6.1 - Fixed typos - Added separator before footnotes

--- a/book/lecture-5/exercise-5.2-solutions.ipynb
+++ b/book/lecture-5/exercise-5.2-solutions.ipynb
@@ -350,10 +350,10 @@
     "```{admonition} Note\n",
     ":class: note\n",
     "\n",
-    "In this exercise, we used an asymptotic approximation of the complementary sensitivity function (Equation {eq}eq:lec5:ex0_sol:complementary_sensitivity).\n",
-    "This approximation is sufficient when the exact plot of \\lvert T(i \\omega) \\rvert is not available.\n",
+    "In this exercise, we used an asymptotic approximation of the complementary sensitivity function (Equation {eq}`eq:lec5:ex0_sol:complementary_sensitivity`).\n",
+    "This approximation is sufficient when the exact plot of $\\lvert T(i \\omega) \\vert$ is not available.\n",
     "\n",
-    "In practical applications, however, you should use the exact magnitude \\lvert T(i \\omega) \\rvert whenever it is available, rather than relying on the asymptotic approximation.\n",
+    "In practical applications, however, you should use the exact magnitude $\\lvert T(i \\omega) \\lvert$ whenever it is available, rather than relying on the asymptotic approximation.\n",
     "\n",
     "```"
    ]
