Fixed typo in Exercise 5.3.

--- a/book/lecture-5/exercise-5.3.ipynb
+++ b/book/lecture-5/exercise-5.3.ipynb
@@ -72,7 +72,7 @@
     },
     "mystnb": {
      "figure": {
-      "caption": "Magnitude Bode plot of the nominal open-loop transfer function $G_o(s)$.\n",
+      "caption": "Magnitude Bode plot of the nominal complementary sensitivity transfer function $T(s)$.\n",
       "name": "fig:lec5:ex3:bode"
      },
      "image": {
