--- a/book/lecture-7/exercise-7.0-solutions.ipynb
+++ b/book/lecture-7/exercise-7.0-solutions.ipynb
@@ -64,7 +64,7 @@
     "```{admonition} Note\n",
     ":class: note\n",
     "\n",
-    "System {eq}`eq:lec7:ex0_sol:ss` is surely observable, because the observable canonical form is minimal (that is, {eq}`eq:lec7:ex0_sol:ss` is of the same order of {eq}`eq:lec7:ex0_sol:system`).\n",
+    "System {eq}`eq:lec7:ex0_sol:ss` is surely observable -- the observable canonical form is, by definition, observable.\n",
     "\n",
     "At the exam, do not forget to assess the observability of the system before solving the observer pole-placement problem!\n",
     "```"
