Fixed typesetting of controllability and observability matrices

--- a/book/lecture-6/exercise-6.0-solutions.ipynb
+++ b/book/lecture-6/exercise-6.0-solutions.ipynb
@@ -68,18 +68,18 @@
     "To determine whether the system is controllable, we need to check that the controllability matrix is full rank.\n",
     "\n",
     "$$\n",
-    "S = \\begin{bmatrix} B & AB \\end{bmatrix} = \\begin{bmatrix} 0 & 8 \\\\ 2 & - 6 \\end{bmatrix}\n",
+    "\\mathcal{S} = \\begin{bmatrix} B & AB \\end{bmatrix} = \\begin{bmatrix} 0 & 8 \\\\ 2 & - 6 \\end{bmatrix}\n",
     "$$\n",
     "\n",
-    "$S$ is full rank. In fact, it's determinant is $\\det(S) = 48 \\neq 0$.\n",
+    "$\\mathcal{S}$ is full rank. In fact, it's determinant is $\\det(S) = 48 \\neq 0$.\n",
     "\n",
     "When it comes to observability, we compute the observability matrix\n",
     "\n",
     "$$\n",
-    "O = \\begin{bmatrix} C \\\\ CA \\end{bmatrix} = \\begin{bmatrix} 0 & 3 \\\\ 0 & -9 \\end{bmatrix}\n",
+    "\\mathcal{O} = \\begin{bmatrix} C \\\\ CA \\end{bmatrix} = \\begin{bmatrix} 0 & 3 \\\\ 0 & -9 \\end{bmatrix}\n",
     "$$\n",
     "\n",
-    "Note that the observability matrix is singular, because the first column is null. Also, $\\det(O) = 0$.\n",
+    "Note that the observability matrix is singular, because the first column is null. Also, $\\det(\\mathcal{O}) = 0$.\n",
     "Therefore the system is **not (fully) observable**."
    ]
   },
