--- a/book/lecture-6/exercise-6.1-solutions.ipynb
+++ b/book/lecture-6/exercise-6.1-solutions.ipynb
@@ -99,7 +99,7 @@
     "Let's check the controllability matrix:\n",
     "\n",
     "$$\n",
-    "S = \\begin{bmatrix} B & AB \\end{bmatrix} = \\begin{bmatrix} 1 & -1 \\\\ 1 & 2 \\end{bmatrix}\n",
+    "\\mathcal{S} = \\begin{bmatrix} B & AB \\end{bmatrix} = \\begin{bmatrix} 1 & -1 \\\\ 1 & 2 \\end{bmatrix}\n",
     "$$\n",
     "\n",
     "The system is **controllable**, since $S$ if full rank ($\\det(S) = 3 \\neq 0$).\n",
@@ -107,10 +107,10 @@
     "Now we move on to the observability matrix:\n",
     "\n",
     "$$\n",
-    "O = \\begin{bmatrix} C \\\\ CA \\end{bmatrix} = \\begin{bmatrix} 1 & 0 \\\\ -1 & 0 \\end{bmatrix}\n",
+    "\\mathcal{O} = \\begin{bmatrix} C \\\\ CA \\end{bmatrix} = \\begin{bmatrix} 1 & 0 \\\\ -1 & 0 \\end{bmatrix}\n",
     "$$\n",
     "\n",
-    "The observabiltiy matrix is singular, as $\\det(O) = 0$. Note that the second column is indeed null! This means that the system is **not observable**."
+    "The observabiltiy matrix is singular, as $\\det(\\mathcal{O}) = 0$. Note that the second column is indeed null! This means that the system is **not observable**."
    ]
   },
   {
