--- a/book/lecture-6/exercise-6.3-solutions.ipynb
+++ b/book/lecture-6/exercise-6.3-solutions.ipynb
@@ -81,10 +81,10 @@
     "To design a state-feedback controller $u = - L x + \\ell_0 r$, we first need to check the  controllability of the system\n",
     "\n",
     "$$\n",
-    "    S = \\begin{bmatrix} B & AB \\end{bmatrix} = \\begin{bmatrix} 1 & -1 \\\\ 1 & -2 \\end{bmatrix}\n",
+    "    \\mathcal{S} = \\begin{bmatrix} B & AB \\end{bmatrix} = \\begin{bmatrix} 1 & -1 \\\\ 1 & -2 \\end{bmatrix}\n",
     "$$\n",
     "\n",
-    "This matrix is full rank ($\\det(S) = -1 \\neq 0$), which means that the system is controllable. We can therefore design the state feedback controller, and we start by the gain $L$."
+    "This matrix is full rank ($\\det(\\mathcal{S}) = -1 \\neq 0$), which means that the system is controllable. We can therefore design the state feedback controller, and we start by the gain $L$."
    ]
   },
   {
