--- a/book/lecture-6/exercise-6.4-solutions.ipynb
+++ b/book/lecture-6/exercise-6.4-solutions.ipynb
@@ -97,10 +97,10 @@
     "Let's first check that the system is controllable. To do so, we inspect the controllability matrix\n",
     "\n",
     "$$\n",
-    "S = \\begin{bmatrix} B & AB \\end{bmatrix} = \\begin{bmatrix} 1 & -2  \\\\ 1 & 0 \\end{bmatrix}\n",
+    "\\mathcal{S} = \\begin{bmatrix} B & AB \\end{bmatrix} = \\begin{bmatrix} 1 & -2  \\\\ 1 & 0 \\end{bmatrix}\n",
     "$$\n",
     "\n",
-    "This matrix is full-rank. Indeed, $\\det(S) = 2 \\neq 0$. The system is therefore controllable.\n",
+    "This matrix is full-rank. Indeed, $\\det(\\mathcal{S}) = 2 \\neq 0$. The system is therefore controllable.\n",
     "To design the state-feedback controller, we plug $u = -Lx + \\ell_0 r$ in {eq}`eq:lec6:ex4_sol:state-space`. Doing so, we get\n",
     "\n",
     "$$\n",
