--- a/book/lecture-7/exercise-7.0-solutions.ipynb
+++ b/book/lecture-7/exercise-7.0-solutions.ipynb
@@ -44,7 +44,7 @@
     "\n",
     "$$\n",
     "\\begin{dcases}\n",
-    "    \\dot{x} = \\begin{bmatrix} a_1 & 1 \\\\ a_2 & 0 \\end{bmatrix} x + \\begin{bmatrix} b_1 - a_1 b_0 \\\\ b_2 - a_2 b_0 \\end{bmatrix} u \\\\\n",
+    "    \\dot{x} = \\begin{bmatrix} -a_1 & 1 \\\\ -a_2 & 0 \\end{bmatrix} x + \\begin{bmatrix} b_1 - a_1 b_0 \\\\ b_2 - a_2 b_0 \\end{bmatrix} u \\\\\n",
     "    y = \\begin{bmatrix} 1 & 0 \\end{bmatrix} x + b_0 u\n",
     "\\end{dcases}\n",
     "$$\n",
@@ -52,7 +52,7 @@
     "In our case, $a_1 = 3$, $a_2 = 5$, $b_0 = 0$, $b_1 = 1$, and $b_2 = 1$. This means that the $A, B, C, D$ matrices are\n",
     "\n",
     "$$\n",
-    "A = \\begin{bmatrix} 3 & 1 \\\\ 5 & 0 \\end{bmatrix} \\quad B = \\begin{bmatrix} 1 \\\\ 1 \\end{bmatrix} \\quad C = \\begin{bmatrix} 1 & 0 \\end{bmatrix} \\quad  D = 0\n",
+    "A = \\begin{bmatrix} -3 & 1 \\\\ -5 & 0 \\end{bmatrix} \\quad B = \\begin{bmatrix} 1 \\\\ 1 \\end{bmatrix} \\quad C = \\begin{bmatrix} 1 & 0 \\end{bmatrix} \\quad  D = 0\n",
     "$$ (eq:lec7:ex0_sol:ss)"
    ]
   },
@@ -101,8 +101,8 @@
     "\n",
     "$$\n",
     "\\begin{aligned}\n",
-    "\\varphi(\\lambda) &= \\det (\\lambda I - (A - KC)) = \\det\\left( \\begin{bmatrix} \\lambda & \\\\ & \\lambda \\end{bmatrix} - \\begin{bmatrix} 3 & 1 \\\\ 5 & 0 \\end{bmatrix} + \\begin{bmatrix} \\kappa_1 \\\\ \\kappa_2 \\end{bmatrix} \\begin{bmatrix} 1 & 0\\end{bmatrix}\\right) \\\\\n",
-    "&= \\det \\begin{bmatrix} \\lambda - 3 + \\kappa_1 & - 1 \\\\ -5 + \\kappa_2 & \\lambda \\end{bmatrix} = \\lambda^2 + (\\kappa_1 - 3) \\lambda + \\kappa_2 - 5\n",
+    "\\varphi(\\lambda) &= \\det (\\lambda I - (A - KC)) = \\det\\left( \\begin{bmatrix} \\lambda & \\\\ & \\lambda \\end{bmatrix} - \\begin{bmatrix} -3 & 1 \\\\ -5 & 0 \\end{bmatrix} + \\begin{bmatrix} \\kappa_1 \\\\ \\kappa_2 \\end{bmatrix} \\begin{bmatrix} 1 & 0\\end{bmatrix}\\right) \\\\\n",
+    "&= \\det \\begin{bmatrix} \\lambda + 3 + \\kappa_1 & - 1 \\\\ +5 + \\kappa_2 & \\lambda \\end{bmatrix} = \\lambda^2 + (\\kappa_1 + 3) \\lambda + \\kappa_2 + 5\n",
     "\\end{aligned}\n",
     "$$"
    ]
@@ -116,9 +116,9 @@
     "\n",
     "$$\n",
     "\\begin{dcases}\n",
-    "\\kappa_1 - 3 = 20\\\\\n",
-    "\\kappa_2 - 5 = 100 \n",
-    "\\end{dcases} \\qquad \\rightarrow \\qquad K = \\begin{bmatrix} 23 \\\\ 105 \\end{bmatrix}\n",
+    "\\kappa_1 + 3 = 20\\\\\n",
+    "\\kappa_2 + 5 = 100 \n",
+    "\\end{dcases} \\qquad \\rightarrow \\qquad K = \\begin{bmatrix} 17 \\\\ 95 \\end{bmatrix}\n",
     "$$"
    ]
   },
