--- a/book/assignments/assignment-2.ipynb
+++ b/book/assignments/assignment-2.ipynb
@@ -9,7 +9,7 @@
     "\n",
     "## Problem 1\n",
     "\n",
-    "Figure 1 (interactive). Bode plot of <script type=\"math/tex\">G(s)</script>. Note that this is also the plot of the open-loop transfer function for <script type=\"math/tex\">K=1</script>, that is, <script type=\"math/tex\">G_o(s) = 1 \\cdot G(s)</script>.\n"
+    "Figure 1 (interactive). Bode plot of $G(s)$. Note that this is also the plot of the open-loop transfer function for $K=1$, that is, $G_o(s) = 1 \\cdot G(s)$.\n"
    ]
   },
   {
@@ -32,7 +32,6 @@
     "pio.renderers.default = \"notebook_connected\" \n",
     "\n",
     "def create_bode_plot():\n",
-    "    # Pre-computed frequency response data for G(s) = 100 / ((1+s)^2 * (1+0.02s))\n",
     "    freq_lims = [0.1, 1000]\n",
     "    mag_lims = [-100, 50]\n",
     "    phase_lims = [-270, 0]\n",
