--- a/book/lecture-5/exercise-5.1-solutions.ipynb
+++ b/book/lecture-5/exercise-5.1-solutions.ipynb
@@ -182,6 +182,7 @@
    "id": "93347834",
    "metadata": {},
    "source": [
+    "(ref:lec5:ex1_sol:q2)=\n",
     "### Question 2"
    ]
   },
@@ -342,7 +343,7 @@
     "```{admonition} Note\n",
     ":class: note\n",
     "\n",
-    "This result is quite different from that derived in the [analytical solution of Question 2](#question-2). \n",
+    "This result is quite different from that derived in the [analytical solution of Question 2](#ref:lec5:ex1_sol:q2). \n",
     "The reason is that in {numref}`fig:lec5:ex1_sol:sketch_sensitivity_1` we used the asymoptotic Bode diagrams, which are **inaccurate near the open-loop poles** (which, in our case, sadly happen to be in $s=-1$, at $\\omega = 1$).\n",
     "\n",
     "Curious to see a proof? See {ref}`ref:lec5:ex1_more_details`!\n",
