--- a/book/assignments/assignment-2.ipynb
+++ b/book/assignments/assignment-2.ipynb
@@ -9,7 +9,7 @@
     "\n",
     "## Problem 1\n",
     "\n",
-    "Figure 1 (interactive). Bode plot of $G(s)$. Note that this is also the plot of the open-loop transfer function for $K=1$, that is, $G_o(s) = 1 \\cdot G(s)$.\n"
+    "Figure 1 (interactive). Bode plot of <script type=\"math/tex\">G(s)</script>. Note that this is also the plot of the open-loop transfer function for <script type=\"math/tex\">K=1</script>, that is, <script type=\"math/tex\">G_o(s) = 1 \\cdot G(s)</script>.\n"
    ]
   },
   {
@@ -558,7 +558,7 @@
     "    # --- Magnitude Plot ---\n",
     "    fig.add_trace(\n",
     "        go.Scatter(\n",
-    "            x=omega, y=mag_db, mode='lines', name='G(s)', line=dict(width=2.5, color='#0072BD'),\n",
+    "            x=omega, y=mag_db, mode='lines', name='$G(s)$', line=dict(width=2.5, color='#0072BD'),\n",
     "            hovertemplate='(ω = %{x:.4g}, |G(iω)|<sub>dB</sub> = %{y:.4g})<extra></extra>'\n",
     "        ),\n",
     "        row=1, col=1\n",
